minikube/networking/fixed-combined-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: combined-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: public.my-service.com
    http:
      paths:
        - path: /path-a(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: service-a
              port:
                number: 80
        - path: /path-b(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: service-b
              port:
                number: 80
